@@ -2,21 +2,23 @@ package org.symly.cli;
 
 import java.nio.file.Path;
 import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
-import lombok.NonNull;
-import lombok.RequiredArgsConstructor;
 import org.symly.env.Env;
 
-@RequiredArgsConstructor
-class LinkCommandMessageFactory {
+public class LinkCommandMessageFactory {
 
-    @NonNull
     private final Env env;
 
+    public LinkCommandMessageFactory(Env env) {
+        this.env = Objects.requireNonNull(env);
+    }
+
     public String creatingLinks(String to, List<String> from) {
-        return String.format(
-                "Creating links in %s to [%s]",
-                env.path(to), from.stream().map(env::path).map(Path::toString).collect(Collectors.joining(", ")));
+        return "Creating links in %s to [%s]"
+                .formatted(
+                        env.path(to),
+                        from.stream().map(env::path).map(Path::toString).collect(Collectors.joining(", ")));
     }
 
     public String linkActionCreate(String from, String to) {
@@ -44,19 +46,18 @@ class LinkCommandMessageFactory {
     }
 
     public String action(String action, String from) {
-        return String.format("%-12s %s", action + ":", from);
+        return "%-12s %s".formatted(action + ":", from);
     }
 
     public String action(String action, String from, String to) {
-        return String.format("%-12s %s -> %s", action + ":", from, env.path(to));
+        return "%-12s %s -> %s".formatted(action + ":", from, env.path(to));
     }
 
     public List<String> cannotCreateLinkError(String from, String to) {
         Path absFrom = env.path(env.home().resolve(from).toString());
         return List.of(
-                String.format("Unable to create link %s -> %s", absFrom, env.path(to)),
-                String.format(
-                        "> Regular file %s already exist. To overwrite it, use the -f (--force) option.", absFrom));
+                "Unable to create link %s -> %s".formatted(absFrom, env.path(to)),
+                "> Regular file %s already exist. To overwrite it, use the -f (--force) option.".formatted(absFrom));
     }
 
     public String everythingUpToDate() {
