@@ -7,30 +7,28 @@ import java.util.Collection;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.stream.Stream;
-import lombok.NonNull;
 import org.symly.cli.SymlyExecutionException;
 import org.symly.files.FileSystemReader;
-import org.symly.links.Directory;
 
 /**
  * A directory which content will have to be linked into the {@link MainDirectory}.
  */
 public class Repository extends Directory {
 
-    Repository(@NonNull Path path) {
+    Repository(Path path) {
         super(path);
     }
 
     Stream<RepositoryEntry> entries(FileSystemReader fsReader) {
         Path path = toPath();
         Map<Path, Collection<IgnoreRule>> ignoreRules = new HashMap<>();
-        ignoreRules.put(path, IgnoreList.read(fsReader, path));
+        ignoreRules.put(path, IgnoreList.readTopLevel(fsReader, path));
         try {
             return fsReader.walk(path)
                     .filter(filePath -> shouldProcessPath(fsReader, filePath, ignoreRules))
                     .map(filePath -> RepositoryEntry.of(relativize(filePath), filePath, type(fsReader, filePath)));
         } catch (IOException e) {
-            throw new SymlyExecutionException(String.format("Unable to analyze repository structure %s", path), e);
+            throw new SymlyExecutionException("Unable to analyze repository structure %s".formatted(path), e);
         }
     }
 
