@@ -1,15 +1,11 @@
 package org.symly.files;
 
 import java.io.IOException;
-import java.nio.file.FileVisitOption;
-import java.nio.file.FileVisitor;
 import java.nio.file.Path;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.Map;
-import java.util.Set;
 import java.util.stream.Stream;
-import lombok.RequiredArgsConstructor;
 import org.symly.cli.SymlyExecutionException;
 
 public class IoMock {
@@ -23,7 +19,7 @@ public class IoMock {
     public void file(Path path, String content) {
         path = path.toAbsolutePath();
         if (fsEntries.containsKey(path)) {
-            throw new IllegalArgumentException(String.format("File system entry %s is already defined", path));
+            throw new IllegalArgumentException("File system entry %s is already defined".formatted(path));
         }
         directory(path.getParent());
         fsEntries.put(path, new File(path, content));
@@ -33,7 +29,7 @@ public class IoMock {
         if (path != null) {
             path = path.toAbsolutePath();
             if (fsEntries.get(path) != null && !(fsEntries.get(path) instanceof Directory)) {
-                throw new IllegalArgumentException(String.format("File system entry %s is already defined", path));
+                throw new IllegalArgumentException("File system entry %s is already defined".formatted(path));
             }
             directory(path.getParent());
             fsEntries.put(path, new Directory(path));
@@ -43,7 +39,7 @@ public class IoMock {
     public void symlink(Path path, Path target) {
         path = path.toAbsolutePath();
         if (fsEntries.containsKey(path)) {
-            throw new IllegalArgumentException(String.format("File system entry %s is already defined", path));
+            throw new IllegalArgumentException("File system entry %s is already defined".formatted(path));
         }
         directory(path.getParent());
         fsEntries.put(path, new Symlink(path, target));
@@ -62,14 +58,22 @@ record Directory(Path path) implements FSEntry {}
 
 record Symlink(Path path, Path target) implements FSEntry {}
 
-@RequiredArgsConstructor
 class FileSystemReaderStub implements FileSystemReader {
 
     private final Map<Path, FSEntry> fsEntries;
 
+    FileSystemReaderStub(Map<Path, FSEntry> fsEntries) {
+        this.fsEntries = fsEntries;
+    }
+
     @Override
     public boolean exists(Path path) {
         return fsEntries.containsKey(path.toAbsolutePath());
+    }
+
+    @Override
+    public boolean isReadable(Path path) {
+        return true;
     }
 
     @Override
@@ -92,10 +96,11 @@ class FileSystemReaderStub implements FileSystemReader {
             return link.target();
         } catch (IOException e) {
             throw new SymlyExecutionException(
-                    String.format("Unable to read link %s real path: %s", path, e.getMessage()), e);
+                    "Unable to read link %s real path: %s".formatted(path, e.getMessage()), e);
         }
     }
 
+    @Override
     public Stream<String> lines(Path path) throws IOException {
         File file = getOfType(File.class, path);
         return Arrays.stream(file.content().split("\n"));
@@ -104,23 +109,27 @@ class FileSystemReaderStub implements FileSystemReader {
     private <T extends FSEntry> T getOfType(Class<T> fsEntryClass, Path path) throws IOException {
         FSEntry fsEntry = fsEntries.get(path.toAbsolutePath());
         if (fsEntry == null) {
-            throw new IOException(String.format("File system entry %s does not exist", path));
+            throw new IOException("File system entry %s does not exist".formatted(path));
         }
         if (fsEntryClass.isInstance(fsEntry)) {
             return fsEntryClass.cast(fsEntry);
         }
-        throw new IOException(String.format(
-                "Path %s is not a %s but is a %s",
-                path, fsEntryClass.getSimpleName(), fsEntry.getClass().getSimpleName()));
+        throw new IOException("Path %s is not a %s but is a %s"
+                .formatted(
+                        path, fsEntryClass.getSimpleName(), fsEntry.getClass().getSimpleName()));
     }
 
+    @Override
+    public Stream<Path> list(Path path) {
+        Path absolutePath = path.toAbsolutePath();
+        int directChildrenNameCount = absolutePath.getNameCount() + 1;
+        return fsEntries.keySet().stream()
+                .filter(p -> p.startsWith(absolutePath) && p.getNameCount() == directChildrenNameCount);
+    }
+
+    @Override
     public Stream<Path> walk(Path path) {
         Path absolutePath = path.toAbsolutePath();
         return fsEntries.keySet().stream().filter(p -> p.startsWith(absolutePath));
-    }
-
-    public void walkFileTree(Path start, Set<FileVisitOption> options, int maxDepth, FileVisitor<? super Path> visitor)
-            throws IOException {
-        throw new IOException("This operation is not stubbed");
     }
 }
